# mknts

./: README.md
lang/cc/: exp.c
lang/cc/helloworld/: CMakeLists.txt  CMakeLists.txt.bak  README.md  client.cc  server.cc
lang/cc/helloworld/protos/: helloworld.proto
lang/cc/helloworld/protos/apis/: helloworld.grpc.pb.cc  helloworld.grpc.pb.h  helloworld.pb.cc
lang/codes/CMake.cc/: README
lang/codes/CMake.cc/DemoOne/: CMakeLists.txt  README
lang/codes/CMake.cc/DemoOne/src/: calc.cc  calc.h
lang/codes/CMake.cc/MultiCmake/src/: CMakeLists.txt
lang/codes/CMake.cc/MultiCmake/src/sort/: CMakeLists.txt  bubble.cc
lang/codes/CMake.cc/TestLib/: CMakeLists.txt  README
lang/codes/Class.c/: CMakeLists.txt  README
lang/codes/DevOpsNote/: README  manage.bash
lang/codes/bak/gmanager/gservant/: .pdm.toml  app.ini  manage.sh  pyproject.toml
lang/codes/bak/gmanager/gservant/app/: config.py  gservant.py
lang/codes/bak/gmanager/gservant/app/internal/core/: mlog.py  zone.py
lang/codes/bak/gmanager/gservant/app/internal/grpc/: __init__.py  server.py
lang/codes/bak/gmanager/gservant/app/internal/grpc/zone/: zone_pb2.pyi
lang/codes/bak/gmanager/gservant/cert/: server.crt
lang/codes/base.c/src/c/DataStructure.c/: CMakeLists.txt  README  build.sh
lang/codes/base.c/src/c/DataStructure.c/src/v1/: clist.c  clist.h  dlist.c  dlist.h  main.c  map.c  map.h  queue.h  slist.c  slist.h  stack.c  stack.h
lang/codes/base.c/src/c/DataStructure.c/src/v2/: arraList.c  hash_table.c  main.c  nodeList.c  priority_queue.c  queue.c  stack.c  tree.c
lang/codes/build-py/builddemo/: Makefile  README.md  pyproject.toml  run.sh
lang/codes/buildPy/demo/: .env  Dockerfile  README  pyproject.toml  requirements.txt  run.bash  setup.py
lang/codes/buildPy/demo/makefiles/: Makefile  build.mk  pex.mk  setuptools.mk  zipapp.mk
lang/codes/buildPy/demo/src/demo/: __init__.py
lang/codes/count_es/: .gitignore  README.md  app.ini.example  manage.sh  pyproject.toml  requirements.txt
lang/codes/count_es/src/count_es/: __main__.py  config.py  dsl.py  log.py  req.py  task.py  utils.py  xlsx.py
lang/codes/count_es/tests/: test_req.py  test_task.py  test_utils.py  test_xlsx.py
lang/codes/gmanager/gmaster/: .dockerignore  .env  Dockerfile  cmd.sh  manage.sh  pyproject.toml  requirements.txt
lang/codes/gmanager/gmaster/app/: config.py
lang/codes/gmanager/gmaster/app/internal/core/: event.py  exception.py  mlog.py  result.py  utils.py
lang/codes/gmanager/gmaster/app/internal/db/: mongo.py  redis.py
lang/codes/gmanager/gmaster/app/internal/grpc/: client.py
lang/codes/gmanager/gmaster/app/internal/grpc/zone/: zone_pb2.py  zone_pb2_grpc.py
lang/codes/gmanager/gmaster/app/internal/models/: user.py  zone.py
lang/codes/gmanager/gmaster/app/internal/schemas/: user.py  zone.py
lang/codes/gmanager/gmaster/app/routers/: user.py  zone.py
lang/codes/gmanager/gmaster/app/tasks/: __init__.py  host_task.py  zone_task.py
lang/codes/gmanager/gmaster/cert/: client.crt
lang/codes/lanpy/: .env.example  MANIFEST.in  Makefile  README.md  manage.sh  pyproject.toml  requirements.txt  setup.py
lang/codes/lanpy/src/lanpy/: __main__.py
lang/codes/lanpy/src/lanpy/config/: __init__.py
lang/codes/lanpy/src/lanpy/iface/: __init__.py
lang/codes/lanpy/src/lanpy/impl/: __init__.py
lang/codes/lanpy/src/lanpy/proto/: __init__.py
lang/codes/lanpy/src/lanpy/service/: __init__.py
lang/codes/notes/src/c/Class.c/: CMakeLists.txt  README
lang/codes/notes/src/c/Class.c/src/: calculate.h  main.cc  person.c  person.h
lang/codes/zmanager/zmaster/: pyproject.toml  requirements.txt  zmaster.conf
lang/codes/zmanager/zmaster/app/: __init__.py  config.py
lang/codes/zmanager/zmaster/app/internal/core/: __init__.py  app_log.py  event.py  exception.py  response.py
lang/codes/zmanager/zmaster/app/internal/db/: __init__.py  mongo.py  redis.py
lang/codes/zmanager/zmaster/app/internal/grpc/: __init__.py  client.py
lang/codes/zmanager/zmaster/app/internal/schema/: __init__.py  zone.py
lang/codes/zmanager/zmaster/app/routers/: __init__.py  zone.py
lang/codes/zmanager/zmaster/app/tasks/: zone.py
lang/codes/zmanager/zmaster/cert/: ca.csr
lang/go/: README.md  context.md  desc.md  flag_use.md  grace.md  init_struct_item.md  instance_interface.md  lazy_load.md  log.md  main.go  mux.md  net_http.md  reload.md  template.md
lang/java/: README.md  build.md  run.md  socket.md
lang/python/: Dockerfile  README.md  asyncio_streams.md  decorator.md  lazy_load.md  project.md  pycryptodome.md  redis.md  stdlib.md  web.md
lang/python/code/cmdbop/: .gitignore  README.md  config.example.yaml  pyproject.toml
lang/python/code/cmdbop/app/: config.py  main.py
lang/python/code/cmdbop/app/api/v1/: auth_api.py  menu_api.py  role_api.py  user_api.py
lang/python/code/cmdbop/app/model/: auth_schema.py  user_model.py  user_schema.py
lang/python/code/cmdbop/app/repository/: auth_repository.py  user_repository.py
lang/python/code/cmdbop/app/service/: auth_service.py  user_service.py
lang/python/code/cmdbop/app/shared/: db.py  redis.py
lang/rust/codes/stask/: Cargo.toml  README.md  echo_server.rs  server.toml
lang/rust/codes/stask/examples/: echo_server.rs
lang/rust/codes/stask/src/: config.rs  error.rs  lib.rs  metrics.rs  protocol.rs
lang/rust/codes/stask/src/client/: connection.rs  load_balancer.rs  mod.rs
lang/rust/codes/stask/src/server/: connection.rs  handler.rs  mod.rs
lang/rust/codes/stask/tests/: integration_test.rs
lang/rust/codes/stcp/: Cargo.toml  README.md
lang/rust/codes/stcp/src/: lib.rs
lang/rust/codes/stcp/src/tests/: integration_tests.rs
linux/ai/: README.md
linux/bash/: 2FA.md  NetworkManager.md  crontab.md  firewalld.md  gcc.md  salt.md  ssh.md  sudo.md  usercmd.sh
linux/elk/: README.md
linux/investment/: README.md
linux/jetbrains/: README.md
linux/k8s/: install.md
linux/mongo/: README.md
linux/openVpn/: README.md  install.sh  install_ovpn.sh  unbound.md
linux/v2ray/: README.md  client.json  server.json  ssl_cert.pem  ssl_key.pem  whiteIp.sh
(+3124 files in other folders)
