[project]
name = "count.es"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "requests>=2.31.0",
    "xlsxwriter>=3.1.9",
    "apscheduler>=3.10.4",
    "zipapps>=2023.9.12",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
