[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Sseve", email = "719283952@qq.com"},
]
dependencies = [
    "celery>=5.2.7",
    "fastapi[all]>=0.90.0",
    "flake8>=6.0.0",
    "mongoengine[all]>=0.26.0",
    "aioredis>=2.0.1",
    "grpcio>=1.51.1",
    "grpcio-tools>=1.51.1",
    "redis>=4.5.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
