[tool.pdm]

# 自定义命令
[tool.pdm.scripts]
start = "bash manage.sh start"
stop = "bash manage.sh stop"
check = "bash manage.sh check"

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Sseve", email = "719283952@qq.com"},
]
dependencies = [
    "grpcio>=1.51.1",
    "grpcio-tools>=1.51.1",
]
requires-python = ">=3.9"
license = {text = "MIT"}
